2013-06-18 Miguel de Dios <miguel.dedios@artica.es>

	* operation/snmpconsole/snmp_view.php: fixed the urls and forms to
	set the filters.

2013-06-17 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_networkmap.php: cleaned source code style.
	
	* operation/agentes/networkmap.php: fixed to create networkmaps
	with the same name (for example users with diferent groups ACL).
	
	Fixes: #2285

2013-06-17 Mario Pulido <mario.pulido@artica.es>

        * images/help/historyddbb.png, 
	images/help/service1.png,
        images/help/service2.png,
	images/help/service3.png,
        images/help/service4.png, 
	images/help/service5.png,
        images/help/service6.png, 
	images/help/service7.png,
        images/help/alert1.png, 
	images/help/alert2.png,
        images/help/actions.png, 
	images/help/netmap1.png,
        images/help/netmap2.png, 
	images/help/netmap3.png,
        godmode/agentes/agent_manager.php,
	godmode/alerts/configure_alert_template.php,
        godmode/setup/performance.php, 
	include/help/es/help_performance.php,
        include/help/es/help_manage_alert_list.php,
        include/help/es/help_agent_server.php,
        include/help/es/help_view_services.php,
        include/help/es/help_network_map_enterprise.php,
        include/help/es/help_recontask.php,
        include/help/es/help_conf_alert_template.php,
        include/help/es/help_history_database.php,
        include/help/ja/help_history_database.php,
        include/help/ja/help_network_map_enterprise.php,
        include/help/ja/help_agent_server.php,
        include/help/ja/help_manage_alert_list.php,
        include/help/ja/help_conf_alert_template.php,
        include/help/ja/help_view_services.php,
        include/help/ja/help_recontask.php,
        include/help/ja/help_performance.php,
        include/help/en/help_manage_alert_list.php,
        include/help/en/help_history_database.php,
        include/help/en/help_network_map_enterprise.php,