@@ -22,7 +22,7 @@ require_once ("include/functions_events.php"); //To get events group information
 check_login ();
 
 if (! check_acl ($config["id_user"], 0, "IR")) {
- 	// Doesn't have access to this page
+	// Doesn't have access to this page
 	db_pandora_audit("ACL Violation", "Trying to access incident details");
 	require ("general/noaccess.php");
 	exit;
@@ -54,10 +54,11 @@ if (isset ($_GET["id"])) {
 	// Note add - everybody that can read incidents, can add notes
 	if (isset ($_GET["insertar_nota"])) {
 		$nota = get_parameter ("nota");
-
-		$sql = sprintf ("INSERT INTO tnota (id_usuario, id_incident, nota) VALUES ('%s', %d, '%s')",$config["id_user"],$id_inc, $nota);
+		
+		$sql = sprintf ("INSERT INTO tnota (id_usuario, id_incident, nota)
+			VALUES ('%s', %d, '%s')", $config["id_user"], $id_inc, $nota);
 		$id_nota = db_process_sql ($sql, "insert_id");
-
+		
 		if ($id_nota !== false) {
 			incidents_process_touch ($id_inc);
 		}
@@ -65,7 +66,7 @@ if (isset ($_GET["id"])) {
 			__('Successfully added'),
 			__('Could not be added'));
 	}
-
+	
 	// Delete note
 	if (isset ($_POST["delete_nota"])) {
 		$id_nota = get_parameter ("delete_nota", 0);
@@ -75,7 +76,7 @@ if (isset ($_GET["id"])) {
 		// incidents notes. note authors are 
 		// able to delete their own notes
 			$result = incidents_delete_note ($id_nota);
-
+			
 			if (!empty ($result)) {
 				incidents_process_touch ($id_inc);
 			}
@@ -84,20 +85,25 @@ if (isset ($_GET["id"])) {
 				__('Could not be deleted'));
 		}
 	}
-
+	
 	// Delete file
 	if (((check_acl ($config["id_user"], $id_grupo, "IM")==1) OR
 		($id_owner == $config["id_user"])) AND isset ($_POST["delete_file"])) {
 		$file_id = (int) get_parameter ("delete_file", 0);
 		$filename = db_get_value ("filename", "tattachment", "id_attachment", $file_id);
-		$sql = sprintf ("DELETE FROM tattachment WHERE id_attachment = %d",$file_id);
+		$sql = sprintf ("
+			DELETE
+			FROM tattachment
+			WHERE id_attachment = %d",$file_id);
 		$result = db_process_sql ($sql);
 		
 		if (!empty ($result)) {
-			if (file_exists($config['homedir'] . '/attachment/pand'.$row["id_attachment"].'_'.$row["filename"]. ".zip"))
-				unlink ($config["attachment_store"]."/pand".$file_id."_".io_safe_output($filename). ".zip");
+			if (file_exists($config['homedir'] . '/attachment/pand' . $row["id_attachment"].'_'.$row["filename"]. ".zip"))
+				unlink ($config["attachment_store"] .
+					"/pand" . $file_id . "_" . io_safe_output($filename) . ".zip");
 			else
-				unlink ($config["attachment_store"]."/pand".$file_id."_".io_safe_output($filename));
+				unlink ($config["attachment_store"] .
+					"/pand" . $file_id . "_" . io_safe_output($filename));
 			
 			
 			incidents_process_touch ($id_inc);
@@ -107,7 +113,7 @@ if (isset ($_GET["id"])) {
 			__('Successfully deleted'),
 			__('Could not be deleted'));
 	}
-
+	
 	// Upload file
 	if ((check_acl ($config["id_user"], $id_grupo, "IW") == 1) AND isset ($_GET["upload_file"]) AND ($_FILES['userfile']['name'] != "")) {
 		$description = get_parameter ("file_description", __('No description available'));
@@ -115,7 +121,7 @@ if (isset ($_GET["id"])) {
 		// Insert into database
 		$filename = io_safe_input ($_FILES['userfile']['name']);
 		$filesize = io_safe_input ($_FILES['userfile']['size']);
-
+		
 		//The following is if you have clamavlib installed
 		//(php5-clamavlib) and enabled in php.ini
 		//http://www.howtoforge.com/scan_viruses_with_php_clamavlib
@@ -130,9 +136,9 @@ if (isset ($_GET["id"])) {
 		
 		$sql = sprintf ("INSERT INTO tattachment (id_incidencia, id_usuario, filename, description, size) 
 			VALUES (%d, '%s', '%s', '%s', %d)", $id_inc, $config["id_user"], $filename, $description, $filesize);
-
+		
 		$id_attachment = db_process_sql ($sql,"insert_id");
-
+		
 		// Copy file to directory and change name
 		if ($id_attachment !== false) {
 			$nombre_archivo = $config["attachment_store"]
@@ -153,7 +159,7 @@ if (isset ($_GET["id"])) {
 			echo '<h3 class="error">'.__('File could not be saved due to database error').'</h3>';
 			$result = false;
 		}
-
+		
 		if ($result !== false) {
 			unlink ($_FILES['userfile']['tmp_name']);
 			incidents_process_touch ($id_inc);
@@ -218,48 +224,68 @@ echo "<script type=\"text/javascript\">
 			$('#add_note').slideDown('slow');
 			return false;
 		});
-	});</script>";
+	});
+	</script>";
 
 if (isset ($id_inc)) { //If $id_inc is set (when $_GET["id"] is set, not $_GET["insert_form"]
 	ui_print_page_header (__('Incident details'). ' #'.$id_inc, "images/book_edit.png", false, "", false, "");
 	echo '<form name="accion_form" method="POST" action="index.php?sec=workspace&sec2=operation/incidents/incident&action=update">';
 	echo '<input type="hidden" name="id_inc" value="'.$id_inc.'">';
-} else {
+}
+else {
 	ui_print_page_header (__('Create incident'), "images/book_edit.png", false, "", false, "");
 	echo '<form name="accion_form" method="POST" action="index.php?sec=workspace&sec2=operation/incidents/incident&action=insert">';
 }
 
 echo '<table cellpadding="4" cellspacing="4" class="databox" width="98%">';
-echo '<tr><td class="datos"><b>'.__('Incident').'</b></td><td colspan="3" class="datos">';
+echo '<tr>
+		<td class="datos"><b>'.__('Incident').'</b></td>
+		<td colspan="3" class="datos">';
 
-if ((check_acl ($config["id_user"], $id_grupo, "IM") == 1) OR ($usuario == $config["id_user"])) {
+if ((check_acl ($config["id_user"], $id_grupo, "IM") == 1) OR
+	($usuario == $config["id_user"])) {
 	html_print_input_text ("titulo", $titulo,'', 70);
-} else {
+}
+else {
 	html_print_input_text_extended ("titulo", $titulo, "", "", 70, "", false, "", "readonly"); 
 }
 
-echo '</td></tr>';
+echo '</td>
+	</tr>';
 
-echo '<tr><td class="datos2"><b>'.__('Opened at').'</b></td><td class="datos2"><i>'.date ($config['date_format'], $inicio).'</i></td>';
-echo '<td class="datos2"><b>'.__('Updated at').'</b><td class="datos2"><i>'.date ($config['date_format'], $actualizacion).'</i></td></tr>';
+echo '<tr>
+		<td class="datos2"><b>'.__('Opened at').'</b></td>
+		<td class="datos2"><i>'.date ($config['date_format'], $inicio).'</i></td>
+		<td class="datos2"><b>'.__('Updated at').'</b></td>
+		<td class="datos2"><i>'.date ($config['date_format'], $actualizacion).'</i></td>
+	</tr>';
 
-echo '<tr><td class="datos"><b>'.__('Owner').'</b></td><td class="datos">';
+echo '<tr>
+	<td class="datos"><b>'.__('Owner').'</b></td>
+	<td class="datos">';
 
 if ((check_acl ($config["id_user"], $id_grupo, "IM") == 1) OR ($usuario == $config["id_user"])) {
 	html_print_select (users_get_info (), "usuario_form", $usuario, '', 'SYSTEM', '', false, false, true, "w135");
-} else {
+}
+else {
 	html_print_select (users_get_info (), "usuario_form", $usuario, '', 'SYSTEM', '', false, false, true, "w135", true);
 }
-echo '</td><td class="datos"><b>'.__('Status').'</b></td><td class="datos">';
+echo '</td>
+	<td class="datos"><b>'.__('Status').'</b></td>
+	<td class="datos">';
 
 if ((check_acl ($config["id_user"], $id_grupo, "IM") == 1) OR ($usuario == $config["id_user"])) {
 	html_print_select (incidents_get_status (), "estado_form", $estado, '', '', '', false, false, false, 'w135');
-} else {
+}
+else {
 	html_print_select (incidents_get_status (), "estado_form", $estado, '', '', '', false, false, false, 'w135', true);
 }
-echo '</td></tr>';
+echo '</td>
+	</tr>';
 
-echo '<tr><td class="datos2"><b>'.__('Source').'</b></td><td class="datos2">';
+echo '<tr>
+		<td class="datos2"><b>'.__('Source').'</b></td>
+		<td class="datos2">';
 
 $fields = array ();
 $return = db_get_all_rows_sql ("SELECT origen FROM torigen ORDER BY origen");
@@ -273,7 +299,8 @@ foreach ($return as $row) {
 // Only owner could change source or user with Incident management privileges
 if ((check_acl ($config["id_user"], $id_grupo, "IM") == 1) OR ($usuario == $config["id_user"])) {
 	html_print_select ($fields, "origen_form", $origen, '', '', '', false, false, false, 'w135');
-} else {
+}
+else {
 	html_print_select ($fields, "origen_form", $origen, '', '', '', false, false, false, 'w135', true);
 }
 echo '</td><td class="datos2"><b>'.__('Group').'</b></td><td class="datos2">';
@@ -281,7 +308,8 @@ echo '</td><td class="datos2"><b>'.__('Group').'</b></td><td class="datos2">';
 // Group combo
 if ((check_acl ($config["id_user"], $id_grupo, "IM") == 1) OR ($usuario == $config["id_user"])) {
 	html_print_select_groups($config["id_user"], "IR", true, "grupo_form", $id_grupo, '', '', '', false, false, false, 'w135');
-} else {
+}
+else {
 	html_print_select_groups($config["id_user"], "IR", true, "grupo_form", $id_grupo, '', '', '', false, false, true, 'w135', true);
 }
 
@@ -297,7 +325,8 @@ else {
 echo '</td><td class="datos"><b>'.__('Creator').'</b></td><td class="datos">';
 if (empty ($id_creator)) {
 	echo 'SYSTEM';
-} else {
+}
+else {
 	echo $id_creator.' (<i>'.get_user_fullname($id_creator).'</i>)';
 }
 
@@ -315,21 +344,23 @@ echo '</td></tr></table><div style="width: 98%; text-align:right;">';
 // Only if user is the used who opened incident or (s)he is admin
 if (isset ($id_inc) AND ((check_acl ($config["id_user"], $id_grupo, "IM") == 1) OR ($usuario == $config["id_user"]))) {
 	html_print_submit_button (__('Update incident'), "accion", false, 'class="sub upd"');
-} elseif (check_acl ($config["id_user"], $id_grupo, "IW")) {
+}
+elseif (check_acl ($config["id_user"], $id_grupo, "IW")) {
 	html_print_submit_button (__('Create'), "accion", false, 'class="sub wand"');
-} else {
+}
+else {
 	html_print_submit_button (__('Submit'), "accion", true, 'class="sub upd"');
 }
 echo "</div></form>";
 
 //If we're actually working on an incident
 if (isset ($id_inc)) {
-	// ********************************************************************
+	//******************************************************************
 	// Notes 
-	// ********************************************************************
+	//******************************************************************
 	
 	echo '<div>';
-
+	
 	echo '<a class="note_control" href="#">';
 	echo html_print_image ('images/add.png', true);
 	echo __('Add note');
@@ -340,7 +371,7 @@ if (isset ($id_inc)) {
 		<tr><td class="datos2"><textarea name="nota" rows="5" cols="70" style="height: 100px;"></textarea></td>
 		<td valign="bottom"><input name="addnote" type="submit" class="sub wand" value="'.__('Add').'"></td></tr>
 		</table></form></div><div>';
-
+	
 	$result = incidents_get_notes ($id_inc);
 	
 	$table->cellpadding = 4;
@@ -373,34 +404,34 @@ if (isset ($id_inc)) {
 	}
 	unset ($table);
 	
-
-	// ************************************************************
+	
+	//******************************************************************
 	// Files attached to this incident
-	// ************************************************************
-
+	//******************************************************************
+	
 	$result = incidents_get_attach ($id_inc);
-
+	
 	$table->cellpadding = 4;
 	$table->cellspacing = 4;
 	$table->class = "databox";
 	$table->width = '98%';
 	$table->head = array ();
 	$table->data = array ();
-
+	
 	$table->head[0] = __('Filename');
 	$table->head[1] = __('Description');
 	$table->head[2] = __('Size');
 	$table->head[3] = __('Delete');
-
+	
 	$table->align[2] = "center";
 	$table->align[3] = "center";
-
+	
 	foreach ($result as $row) {
 		if (file_exists($config['homedir'] . '/attachment/pand'.$row["id_attachment"].'_'.io_safe_output($row["filename"]). ".zip"))
 			$url = 'attachment/pand'.$row["id_attachment"].'_'.io_safe_output($row["filename"]). ".zip";
 		else
 			$url = 'attachment/pand'.$row["id_attachment"].'_'.io_safe_output($row["filename"]);
-				
+		
 		$data[0] = html_print_image("images/disk.png", true, array("border" => '0', "align" => "top")) .
 			'&nbsp;&nbsp;<a target="_new" href="' . $url . '"><b>'.$row["filename"].'</b></a>';
 		$data[1] = $row["description"];
@@ -413,7 +444,7 @@ if (isset ($id_inc)) {
 		}
 		array_push ($table->data, $data);
 	}
-
+	
 	if (!empty ($table->data)) {
 		echo "<h4>".__('Attached files')."</h4>";
 		echo '<form method="POST" action="index.php?sec=workspace&sec2=operation/incidents/incident_detail&id='.$id_inc.'">';
@@ -421,22 +452,22 @@ if (isset ($id_inc)) {
 		echo '</form>';
 	}
 	unset ($table);
-
-	// ************************************************************
+	
+	//******************************************************************
 	// Upload control
-	// ************************************************************
-
-
+	//******************************************************************
+	
+	
 	// Upload control
 	if ((check_acl($config["id_user"], $id_grupo, "IW")==1)) {
-
+		
 		echo '<div>';
 		echo '<a class="attachment" href="#">';
 		echo html_print_image ('images/add.png', true);
 		echo __('Add attachment');
 		echo '</a>';
 		echo '</div>';
-
+		
 		echo '<div><form method="post" id="file_control" action="index.php?sec=workspace&sec2=operation/incidents/incident_detail&id='.$id_inc.'&upload_file=1" enctype="multipart/form-data"><h4>'.__('Add attachment').'</h4>';
 		echo '<table cellpadding="4" cellspacing="3" class="databox" width="98%">
 			<tr><td class="datos">'.__('Filename').'</td><td class="datos"><input type="file" name="userfile" value="userfile" class="sub" size="40" /></td></tr>
